force-app/main/default/objects/Consultor__c/Consultor__c.object-meta.xml
<CustomObject>
    <label>Consultor</label>
    <nameField>
        <label>Nome do Consultor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultores</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>