force-app/main/default/objects/Consultor__c/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <label>Agência</label>
    <length>10</length>
    <type>Text</type>
</CustomField>