force-app/main/default/objects/Consultor__c/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <description>Campo para definir Bairro do cliente.</description>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>