force-app/main/default/objects/Consultor__c/fields/Bairro_da_Unidade__c.field-meta.xml
<CustomField>
    <fullName>Bairro_da_Unidade__c</fullName>
    <label>Bairro da Unidade</label>
    <type>TextArea</type>
</CustomField>