force-app/main/default/objects/Consultor__c/fields/BairroCobranca__c.field-meta.xml
<CustomField>
    <fullName>BairroCobranca__c</fullName>
    <label>Bairro de Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>