force-app/main/default/objects/Consultor__c/fields/Celular__c.field-meta.xml
<CustomField>
    <fullName>Celular__c</fullName>
    <label>Celular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>