force-app/main/default/objects/Consultor__c/fields/CEP__c.field-meta.xml
<CustomField>
    <fullName>CEP__c</fullName>
    <description>Campo para definir CEP do cliente.</description>
    <label>CEP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>