force-app/main/default/objects/Consultor__c/fields/CEP_da_Unidade__c.field-meta.xml
<CustomField>
    <fullName>CEP_da_Unidade__c</fullName>
    <label>CEP da Unidade</label>
    <length>20</length>
    <type>Text</type>
</CustomField>