force-app/main/default/objects/Consultor__c/fields/CidadeCobranca__c.field-meta.xml
<CustomField>
    <fullName>CidadeCobranca__c</fullName>
    <label>Cidade de Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>