force-app/main/default/objects/Consultor__c/fields/CidadeEntrega__c.field-meta.xml
<CustomField>
    <fullName>CidadeEntrega__c</fullName>
    <label>Cidade de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>