force-app/main/default/objects/Consultor__c/fields/CodigoPostalCobranca__c.field-meta.xml
<CustomField>
    <fullName>CodigoPostalCobranca__c</fullName>
    <label>Código Postal de Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>