force-app/main/default/objects/Consultor__c/fields/CodigoPostalEntrega__c.field-meta.xml
<CustomField>
    <fullName>CodigoPostalEntrega__c</fullName>
    <label>Código Postal de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>