force-app/main/default/objects/Consultor__c/fields/Comissao__c.field-meta.xml
<CustomField>
    <fullName>Comissao__c</fullName>
    <label>Comissão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>