force-app/main/default/objects/Consultor__c/fields/Complemento__c.field-meta.xml
<CustomField>
    <fullName>Complemento__c</fullName>
    <description>Campo para definir Complemento do cliente.</description>
    <label>Complemento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>