force-app/main/default/objects/Consultor__c/fields/ComplementoCobranca__c.field-meta.xml
<CustomField>
    <fullName>ComplementoCobranca__c</fullName>
    <label>Complemento de Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>