force-app/main/default/objects/Consultor__c/fields/ConsultantDeadlineRange__c.field-meta.xml
<CustomField>
    <fullName>ConsultantDeadlineRange__c</fullName>
    <label>Faixa do Prazo Consultor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>