force-app/main/default/objects/Consultor__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Campo para definir E-mail do cliente.</description>
    <inlineHelpText>abcd@gmail.com</inlineHelpText>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>