force-app/main/default/objects/Consultor__c/fields/EmailUnidade__c.field-meta.xml
<CustomField>
    <fullName>EmailUnidade__c</fullName>
    <description>Email da unidade franqueada</description>
    <label>Email Unidade</label>
    <type>Email</type>
</CustomField>