force-app/main/default/objects/Consultor__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acre AC</fullName>
            </value>
            <value>
                <fullName>Alagoas AL</fullName>
            </value>
            <value>
                <fullName>Amapá AP</fullName>
            </value>
            <value>
                <fullName>Amazonas AM</fullName>
            </value>
            <value>
                <fullName>Bahia BA</fullName>
            </value>
            <value>
                <fullName>Ceará CE</fullName>
            </value>
            <value>
                <fullName>Espírito Santo ES</fullName>
            </value>
            <value>
                <fullName>Goiás GO</fullName>
            </value>
            <value>
                <fullName>Maranhão MA</fullName>
            </value>
            <value>
                <fullName>Mato Grosso MT</fullName>
            </value>
            <value>
                <fullName>Mato Grosso do Sul MS</fullName>
            </value>
            <value>
                <fullName>Minas Gerais MG</fullName>
            </value>
            <value>
                <fullName>Pará PA</fullName>
            </value>
            <value>
                <fullName>Paraíba PB</fullName>
            </value>
            <value>
                <fullName>Paraná PR</fullName>
            </value>
            <value>
                <fullName>Pernambuco PE</fullName>
            </value>
            <value>
                <fullName>Piauí PI</fullName>
            </value>
            <value>
                <fullName>Rio de Janeiro RJ</fullName>
            </value>
            <value>
                <fullName>Rio Grande do Norte RN</fullName>
            </value>
            <value>
                <fullName>Rio Grande do Sul RS</fullName>
            </value>
            <value>
                <fullName>Rondônia RO</fullName>
            </value>
            <value>
                <fullName>Roraima RR</fullName>
            </value>
            <value>
                <fullName>Santa Catarina SC</fullName>
            </value>
            <value>
                <fullName>São Paulo SP</fullName>
            </value>
            <value>
                <fullName>Sergipe SE</fullName>
            </value>
            <value>
                <fullName>Tocantins TO</fullName>
            </value>
            <value>
                <fullName>Distrito Federal DF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>