force-app/main/default/objects/Consultor__c/fields/Formata_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>Formata_CNPJ__c</fullName>
    <formula>TRIM(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CNPJ__c, &apos;.&apos;, &apos;&apos;), &apos;-&apos;, &apos;&apos;), &apos;/&apos;, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formata CNPJ</label>
    <type>Text</type>
</CustomField>