force-app/main/default/objects/Consultor__c/fields/FreezeConsult__c.field-meta.xml
<CustomField>
    <fullName>FreezeConsult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Congelar Consultor</label>
    <type>Checkbox</type>
</CustomField>