force-app/main/default/objects/Consultor__c/fields/IDSAP__c.field-meta.xml
<CustomField>
    <fullName>IDSAP__c</fullName>
    <label>ID SAP</label>
    <type>AutoNumber</type>
</CustomField>