force-app/main/default/objects/Consultor__c/fields/IdVirtualOffice2__c.field-meta.xml
<CustomField>
    <fullName>IdVirtualOffice2__c</fullName>
    <label>Id no Virtual Office</label>
    <length>90</length>
    <type>Text</type>
</CustomField>