force-app/main/default/objects/Consultor__c/fields/IdVirtualOffice__c.field-meta.xml
<CustomField>
    <fullName>IdVirtualOffice__c</fullName>
    <description>Id do cliente gerado no app Virtual Office (fora do Salesforce)</description>
    <externalId>true</externalId>
    <label>Id no Gerador de Oportunidades</label>
    <length>90</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>