force-app/main/default/objects/Consultor__c/fields/Lb065_RegiaoConsultorEstado__c.field-meta.xml
<CustomField>
    <fullName>Lb065_RegiaoConsultorEstado__c</fullName>
    <inlineHelpText>Exemplo: &quot;SP, PR, SC&quot;</inlineHelpText>
    <label>Região Consultor Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>