force-app/main/default/objects/Consultor__c/fields/Lb065_UltimoLeadRecebido__c.field-meta.xml
<CustomField>
    <fullName>Lb065_UltimoLeadRecebido__c</fullName>
    <label>Ultimo Lead Recebido</label>
    <type>DateTime</type>
</CustomField>