force-app/main/default/objects/Consultor__c/fields/Lb65_Graduacao__c.field-meta.xml
<CustomField>
    <fullName>Lb65_Graduacao__c</fullName>
    <label>Graduação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>