force-app/main/default/objects/Consultor__c/fields/Login_no_virtual__c.field-meta.xml
<CustomField>
    <fullName>Login_no_virtual__c</fullName>
    <label>Login no virtual office</label>
    <type>TextArea</type>
</CustomField>