force-app/main/default/objects/Consultor__c/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <description>Campo para definir Logradouro do cliente.</description>
    <label>Logradouro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>