force-app/main/default/objects/Consultor__c/fields/LogradouroDaUnidade__c.field-meta.xml
<CustomField>
    <fullName>LogradouroDaUnidade__c</fullName>
    <description>Endereço da unidade franqueada</description>
    <label>Logradouro da Unidade</label>
    <type>TextArea</type>
</CustomField>