force-app/main/default/objects/Consultor__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <label>Município</label>
    <length>255</length>
    <type>Text</type>
</CustomField>