force-app/main/default/objects/Consultor__c/fields/Municipio_da_Unidade__c.field-meta.xml
<CustomField>
    <fullName>Municipio_da_Unidade__c</fullName>
    <label>Município da Unidade</label>
    <type>TextArea</type>
</CustomField>