force-app/main/default/objects/Consultor__c/fields/MunicipioCobranca__c.field-meta.xml
<CustomField>
    <fullName>MunicipioCobranca__c</fullName>
    <label>Municipio de Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>