force-app/main/default/objects/Consultor__c/fields/NomeSocial__c.field-meta.xml
<CustomField>
    <fullName>NomeSocial__c</fullName>
    <label>Nome Social</label>
    <length>80</length>
    <type>Text</type>
</CustomField>