force-app/main/default/objects/Consultor__c/fields/NumeroIdentificacao__c.field-meta.xml
<CustomField>
    <fullName>NumeroIdentificacao__c</fullName>
    <externalId>true</externalId>
    <label>Numero de Identificação</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>