force-app/main/default/objects/Consultor__c/fields/PaisCobranca__c.field-meta.xml
<CustomField>
    <fullName>PaisCobranca__c</fullName>
    <label>País de Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>