force-app/main/default/objects/Consultor__c/fields/PaisEntrega__c.field-meta.xml
<CustomField>
    <fullName>PaisEntrega__c</fullName>
    <label>País de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>