force-app/main/default/objects/Consultor__c/fields/ReceiveB2BLead__c.field-meta.xml
<CustomField>
    <fullName>ReceiveB2BLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receber Lead B2B</label>
    <type>Checkbox</type>
</CustomField>