force-app/main/default/objects/Consultor__c/fields/ReceiveConsultorLead__c.field-meta.xml
<CustomField>
    <fullName>ReceiveConsultorLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receber Lead Consultor</label>
    <type>Checkbox</type>
</CustomField>