force-app/main/default/objects/Consultor__c/fields/RuaCobranca__c.field-meta.xml
<CustomField>
    <fullName>RuaCobranca__c</fullName>
    <label>Rua de Cobrança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>