force-app/main/default/objects/Consultor__c/fields/RuaEntrega__c.field-meta.xml
<CustomField>
    <fullName>RuaEntrega__c</fullName>
    <label>Rua de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>