force-app/main/default/objects/Consultor__c/fields/SeCPFouCNPJ__c.field-meta.xml
<CustomField>
    <fullName>SeCPFouCNPJ__c</fullName>
    <description>Campo para pegar o valor de CPF ou CNPJ.</description>
    <formula>IF( CNPJ__c =null,SUBSTITUTE(SUBSTITUTE(CPF__c, &quot;-&quot;, null),&quot;.&quot;, null),
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(CNPJ__c , &quot;-&quot;, null),&quot;.&quot;, null), &quot;/&quot;,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SeCPFouCNPJ</label>
    <type>Text</type>
</CustomField>