force-app/main/default/objects/Consultor__c/fields/SendLead__c.field-meta.xml
<CustomField>
    <fullName>SendLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receber Lead</label>
    <type>Checkbox</type>
</CustomField>