force-app/main/default/objects/Consultor__c/fields/SpecialRange__c.field-meta.xml
<CustomField>
    <fullName>SpecialRange__c</fullName>
    <label>Faixa Especial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
                <label>Muito importante</label>
            </value>
            <value>
                <fullName>Warm</fullName>
                <label>Importante</label>
            </value>
            <value>
                <fullName>Cold</fullName>
                <label>Pouco importante</label>
            </value>
            <value>
                <fullName>Prioritário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>