force-app/main/default/objects/Consultor__c/fields/SucessoIntegracaoSAP__c.field-meta.xml
<CustomField>
    <fullName>SucessoIntegracaoSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sucesso Integração SAP</label>
    <type>Checkbox</type>
</CustomField>