force-app/main/default/objects/Consultor__c/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <description>Campo para definir Telefone do cliente.</description>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>