force-app/main/default/objects/Consultor__c/fields/Telefone_da_Unidade__c.field-meta.xml
<CustomField>
    <fullName>Telefone_da_Unidade__c</fullName>
    <label>Telefone da Unidade</label>
    <type>Phone</type>
</CustomField>